<resources>
    <string name="app_name">PetsLane</string>
    <string name="home">Home</string>
    <string name="Userprofile">User profile</string>
    <string name="info">info</string>
    <string name="catgif">catgif</string>
    <string name="welcome">welcome</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="login">LOGIN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="user_example_com">user@example.com</string>
    <string name="profile_image_desc" />
    <string name="click_to_view_sidebar">Click to view sidebar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="tools">TOOLS</string>
    <string name="user_1234">User 1234</string>
    <string name="user_profile_picture">user profile picture</string>
    <string name="username12345_gmail_com">username12345@gmail.com</string>
    <string name="add">+ ADD</string>
    <string name="no_pet_profile_indication">no pet profile indication</string>
    <string name="no_pet_profile_yet">No pet profile yet!</string>
    <string name="search">Search....</string>
    <string name="my_pets">My Pets</string>
    <string name="aboutus">About us</string>
    <string name="schedule">Schedule</string>
    <string name="mealplan">Meal plan</string>
    <string name="trainingresources">Training\nresources</string>
    <string name="uploadimage">Upload image on map</string>
    <string name="mealplandesc">mealplandesc</string>
    <string name="my_petsdesc">my_petsdesc</string>
    <string name="scheduledesc">scheduledesc</string>
    <string name="trainingresourcesdesc">trainingresourcesdesc</string>
    <string name="uploadimagedesc">uploadimagedesc</string>
    <string name="dashboard">dashboard</string>
    <string name="welcome_to_petslane">Welcome to PetsLane!</string>
</resources>