<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools ="http://schemas.android.com/tools"
      tools:showIn ="navigation_view">


    <group
        android:checkableBehavior="single">


        <item
            android:id="@+id/home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"
            />

        <item
            android:id="@+id/UserProfile"
            android:icon="@drawable/baseline_person_24"
            android:title="@string/Userprofile"
            />

        <item
            android:id="@+id/about"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/aboutus"
            />

        <item
            android:id="@+id/settings"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/settings"/>

    </group>

        <item
            android:title="">
        <menu>

        <item
            android:id="@+id/logout"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/logout"/>

        </menu>

        </item>

</menu>