<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="165dp"
    android:layout_gravity="top"
    android:padding="16dp"
    android:background="@drawable/bg1"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/username"
        android:importantForAccessibility="yes"
        android:text="@string/user_1234"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/profilepic"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/usermail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="yes"
        android:text="@string/username12345_gmail_com"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/profilepic"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/profilepic"
        android:layout_width="94dp"
        android:layout_height="107dp"
        android:contentDescription="@string/user_profile_picture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275"
        app:srcCompat="@drawable/profilepic" />


</androidx.constraintlayout.widget.ConstraintLayout>
