<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:elevation="10dp"
    android:background="@drawable/rounded_square"
    tools:context=".home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- My Pets Button -->

        <!-- Schedules Button -->

        <LinearLayout
            android:id="@+id/mypets"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/square_button"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/mealplans"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/my_petsdesc"
                android:src="@drawable/baseline_pets_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_pets"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Meal Plans Button -->

        <LinearLayout
            android:id="@+id/schedules"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:background="@drawable/square_button"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.81"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.138">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/scheduledesc"
                android:src="@drawable/baseline_calendar_month_24" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schedule"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mealplans"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/square_button"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.147"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.464">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_fastfood_24"
                android:contentDescription="@string/mealplandesc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mealplan"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <!-- Training Resources Button -->
        <LinearLayout
            android:id="@+id/trainingsource"
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/square_button"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.81"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.464">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_menu_book_24"
                android:contentDescription="@string/trainingresourcesdesc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/trainingresources"
                android:textColor="@android:color/black" />

        </LinearLayout>

        <!-- Upload Image Button -->
        <LinearLayout
            android:id="@+id/uploadimage"
            android:layout_width="310dp"
            android:layout_height="123dp"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/square_button"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.425"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.83">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_image_24"
                android:contentDescription="@string/uploadimagedesc" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uploadimage"
                android:textColor="@android:color/black" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
