<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5DE82">

    <!-- ImageView for the cat -->
    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="260dp"
        android:layout_height="149dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/cat"
        android:contentDescription="@string/catgif" />

    <!-- View for rounded square background -->
    <View
        android:id="@+id/squareView"
        android:layout_width="352dp"
        android:layout_height="471dp"
        android:background="@drawable/rounded_square"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.0" />

    <!-- Welcome Image -->
    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="363dp"
        android:layout_height="243dp"
        app:layout_constraintBottom_toBottomOf="@+id/squareView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.217"
        app:srcCompat="@drawable/welcome"
        android:contentDescription="@string/welcome" />

    <!-- Username input field -->
    <EditText
        android:id="@+id/usernameInput"
        android:layout_width="317dp"
        android:layout_height="52dp"
        android:layout_marginTop="256dp"
        android:backgroundTint="@color/black"
        android:hint="@string/username"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8"
        android:autofillHints="" />

    <!-- Password input field -->
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="314dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/black"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/squareView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_percent="0.8"
        android:autofillHints="" />

    <!-- "Forgot Password?" TextView -->
    <TextView
        android:id="@+id/forgotPasswordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:importantForAccessibility="yes"
        android:minHeight="48dp"
        android:text="@string/forgot_password"
        android:textColor="#0000FF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/squareView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.822"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInput"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:backgroundTint="#0A0B04"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="@+id/squareView"
        app:layout_constraintEnd_toEndOf="@+id/squareView"
        app:layout_constraintStart_toStartOf="@+id/squareView"
        app:layout_constraintTop_toBottomOf="@id/forgotPasswordText" />

    <!-- "Don't have an account? Sign Up" TextView -->
    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="#0000FF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button" />

    <!-- Fragment Container -->
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
